--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "html2canvas": "^1.4.1",
     "leaflet": "^1.9.4",
     "leaflet-image": "^0.4.0",
+    "leaflet-simple-map-screenshoter": "^0.5.0",
+    "leaflet.browser.print": "^2.0.2",
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
@@ -17,6 +19,7 @@
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "use-react-screenshot": "^4.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
